# DeepPotatoGPU

./: .gitignore  CMakeLists.txt  readme.md
demo/: CMakeLists.txt
demo/compression/: CMakeLists.txt  main.cu
demo/digits/: CMakeLists.txt  idx.hpp  main.cu
demo/digits/data/: readme.md
demo/utils/display/: canvas.cpp  canvas.hpp
demo/xor/: CMakeLists.txt  main.cu
src/: executor.hpp  external.hpp  generic.hpp  main.cu
src/compute/: buffer.hpp  cpu.hpp  cuda.hpp  executor.hpp  generic.hpp
src/math/: matrix.hpp
src/network/: data.hpp  layer.hpp  network.hpp
src/utils/: image.hpp  timer.hpp
src/utils/display/: CMakeLists.txt  canvas.cpp  window.cpp  window.hpp
